--- a/app/src/main/res/layout/create_question.xml
+++ b/app/src/main/res/layout/create_question.xml
@@ -11,6 +11,12 @@
         android:ems="10"
         android:id="@+id/editText" />
 
+    <Button
+        android:text="Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button" />
+
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
