--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,38 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.capps.question.MainActivity">
 
-    <FrameLayout
-        android:id="@id/header"
+    <LinearLayout
         android:layout_alignParentTop="true"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:textSize="@dimen/titleLarge"
+            android:text="@string/login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <RadioGroup
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal"
+            android:id="@id/rbgADminEmbloyee"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <RadioButton
+                android:id="@id/rbAdmin"
+                android:text="@string/admin"
+                android:checked="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <RadioButton
+                android:id="@id/rbEmbloyee"
+                android:text="@string/employee"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RadioGroup>
+
+    </LinearLayout>
 
     <FrameLayout
         android:layout_centerHorizontal="true"
@@ -23,11 +50,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <FrameLayout
-        android:id="@id/footer"
+
+    <Button
         android:layout_alignParentBottom="true"
+        android:id="@id/buttonLogin"
+        android:text="@string/btLogin"
+        android:textSize="@dimen/ButtonTextSize"
+        android:layout_gravity="center_horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
 
 
 </RelativeLayout>
