--- a/app/src/main/res/layout/login_content_admin_frag.xml
+++ b/app/src/main/res/layout/login_content_admin_frag.xml
@@ -8,4 +8,5 @@
     android:layout_gravity="center_horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@id/editTextPassword"
     />
