--- a/app/src/main/res/layout/login_content_employee_frag.xml
+++ b/app/src/main/res/layout/login_content_employee_frag.xml
@@ -14,6 +14,8 @@
         android:inputType="textEmailAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@id/editTextEmail"
+        android:maxLength="@integer/maxEmailLength"
         />
 
 
@@ -22,9 +24,11 @@
         android:hint="@string/etNameHint"
         android:textSize="@dimen/EditTextSize"
         android:lines="1"
+        android:maxLength="@integer/maxNameLength"
         android:inputType="textPersonName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@id/editTextName"
         />
 
 
