question not completed yet..vreate Q list Textbox error...

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="ButtonTextSize">21sp</dimen>
     <dimen name="EditTextSize">21sp</dimen>
     <dimen name="loginContentEmployeeEditTextNameMarginTop">2dp</dimen>
+    <dimen name="adminOPtionButtonMargin">3dp</dimen>
 </resources>
