--- a/app/src/main/res/layout/login_content_admin_frag.xml
+++ b/app/src/main/res/layout/login_content_admin_frag.xml
@@ -8,5 +8,6 @@
     android:layout_gravity="center_horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:maxLength="21"
     android:id="@id/editTextPassword"
     />
