--- a/app/src/main/res/layout/row_listview_questions.xml
+++ b/app/src/main/res/layout/row_listview_questions.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginTop="3dp"
+    android:layout_marginBottom="3dp">
 
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_weight="8"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:hint="Question"
@@ -12,8 +15,8 @@
         android:id="@id/rowListEditTExtQuestion" />
 
     <CheckBox
-        android:text="CheckBox"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_weight="2"
         android:layout_height="wrap_content"
         android:id="@id/rowListCheckBoxtQuestion" />
 </LinearLayout>
