question not try saved and writing answer save,next step create tables Q&Answer

--- a/app/src/main/res/layout/create_question.xml
+++ b/app/src/main/res/layout/create_question.xml
@@ -14,7 +14,7 @@
             android:inputType="textPersonName"
             android:hint="Question"
             android:ems="10"
-            android:id="@+id/editText" />
+            android:id="@id/edutTextQuestion" />
         <Spinner
             android:layout_gravity="center_vertical"
             android:layout_width="0dp"
