--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -17,4 +17,5 @@
     <item name="buttonSaveNewQuestion" type="id">buttonSaveNewQuestion</item>
     <item name="buttonListAllQues" type="id">buttonListAllQues</item>
     <item name="buttonUsers" type="id">buttonUsers</item>
+    <item name="edutTextQuestion" type="id">editTExtQuestion</item>
 </resources>
