sprite list to serptited farg..success

--- a/app/src/main/res/layout/create_question.xml
+++ b/app/src/main/res/layout/create_question.xml
@@ -26,11 +26,14 @@
     </LinearLayout>
 
 
-    <ListView
-        android:id="@android:id/list"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:id="@id/content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1">
+
+    </LinearLayout>
 
     <Button
         android:text="@string/save"
