--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="EditTextSize">21sp</dimen>
     <dimen name="loginContentEmployeeEditTextNameMarginTop">2dp</dimen>
     <dimen name="adminOPtionButtonMargin">3dp</dimen>
+    <dimen name="marginTopVeryShort">2dp</dimen>
 </resources>
