--- a/app/src/main/res/layout/login_content_employee_frag.xml
+++ b/app/src/main/res/layout/login_content_employee_frag.xml
@@ -25,7 +25,7 @@
         android:textSize="@dimen/EditTextSize"
         android:lines="1"
         android:maxLength="@integer/maxNameLength"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@id/editTextName"
