show Question completed 50% and try to custmaiz QuestionAdapter to it

--- a/app/src/main/res/layout/question_detail_frag.xml
+++ b/app/src/main/res/layout/question_detail_frag.xml
@@ -18,6 +18,15 @@
         android:layout_height="0dp"
         android:layout_weight="9"/>
 
+    <!--THis Button is Invisibile-->
+    <Button
+        android:id="@id/buttonNextQuestion"
+        android:text="@string/next"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:visibility="gone"/>
+
     <!--people list details-->
     <!--<FrameLayout-->
         <!--android:layout_width="match_parent"-->
