--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -20,5 +20,6 @@
     <item name="edutTextQuestion" type="id">editTExtQuestion</item>
     <item name="contentAnswer" type="id">contentAnswer</item>
     <item name="textViewQuestion" type="id">extViewQuestion</item>
+    <item name="buttonNextQuestion" type="id">buttonNextQuestion</item>
 
 </resources>
