--- a/app/src/main/res/layout/frag_admin_options.xml
+++ b/app/src/main/res/layout/frag_admin_options.xml
@@ -29,6 +29,6 @@
             android:text="@string/users"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@id/buttonUsers" />
+            android:id="@id/buttonListAllUsers" />
     </LinearLayout>
 </FrameLayout>
